# Projet_2A

./: .gitignore
Camera/: Makefile.am  Makefile.in  camera-genom3-uninstalled.pc.in  camera-genom3.pc.in  camera-struct.idl  camera.gen  camera.gen~  configure  configure.ac
Camera/autoconf/: accamera.h.in
Camera/autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
Camera/codels/: Makefile.am  Makefile.in  camera_codels.cc  camera_film_codels.c  camera_film_codels.cc  imagerie.cpp
Destijl/src/thread/: ThreadVideo.cpp
Display/: Makefile.am  Makefile.in  configure  configure.ac  display-genom3-uninstalled.pc.in  display-genom3.pc.in  display-struct.idl  display.gen  display.gen~  robloco.gen~
Display/autoconf/: acdisplay.h.in
Display/autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
Display/codels/: Makefile.am  Makefile.in  display_codels.c  display_monitor_codels.c  display_monitor_codels.cc  display_orders_codels.c  display_orders_codels.cc  tcpServer.cpp  tcpServer.hpp
Loco/: Makefile.am  Makefile.in  configure  configure.ac  loco-genom3-uninstalled.pc.in  loco-genom3.pc.in  loco-struct.idl  loco.gen  loco.gen~
Loco/autoconf/: acloco.h.in
Loco/autom4te.cache/: output.1  requests  traces.0  traces.1  traces.2
Loco/codels/: Makefile.am  Makefile.in  loco_MoveAndBatt_codels.cc  loco_batt_codels.c  loco_codels.c  loco_codels.cc  loco_move_codels.c  loco_move_codels.cc  serial.cpp  serial.hpp
